# boxddd

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  pages.yml  release-crates.yml  release-preflight.yml  release.yml
bevy_boxddd/: Cargo.toml  README.md
bevy_boxddd/examples/: README.md  advanced_colliders_3d.rs  contact_messages_3d.rs  debug_draw_overlay_3d.rs  debug_gizmos_3d.rs  falling_stack_3d.rs  joint_gallery_3d.rs  physics_picking_3d.rs
bevy_boxddd/examples/support/: mod.rs
bevy_boxddd/examples/testbed_3d/: control.rs  lab.rs  main.rs  picking.rs  scenes.rs  ui.rs
bevy_boxddd/src/: components.rs  debug_draw.rs  errors.rs  lib.rs  math.rs  messages.rs  plugin.rs  prelude.rs  query.rs  resources.rs  systems.rs
bevy_boxddd/tests/: debug_draw.rs  joints.rs  math.rs  messages.rs  plugin_lifecycle.rs  query.rs  testbed.rs  transform_sync.rs
boxddd/: Cargo.toml  build.rs
boxddd-sys/: Cargo.toml  README.md  build.rs
boxddd-sys/provider/: debug_callbacks.c
boxddd-sys/src/: bindings_pregenerated.rs  bindings_pregenerated_double.rs  ffi.rs  lib.rs
boxddd-sys/tests/: layout.rs
boxddd/examples/: README.md  advanced_collision.rs  bevy_ecs_integration.rs  body_controls.rs  character_mover.rs  compound_query.rs  continuous_collision.rs  determinism.rs  dynamic_tree.rs  egui_debug_draw.rs  error_handling.rs  events.rs  glam_interop.rs  hello_world.rs  joints.rs  mesh_height_field_query.rs  mint_interop.rs  nalgebra_interop.rs  physics_thread.rs  recording_replay.rs  shape_queries.rs  stats_profile.rs  task_system.rs  tokio_async_bridge.rs  wasm_smoke.rs
boxddd/examples/common/: mod.rs
boxddd/src/: body.rs  callbacks.rs  collision.rs  debug_draw.rs  dynamic_tree.rs  error.rs  events.rs  interop.rs  joints.rs  lib.rs  prelude.rs  query.rs  raw.rs  recording.rs  shapes.rs  types.rs  world.rs
boxddd/src/core/: box3d_lock.rs  callback_state.rs  debug_checks.rs  ffi_vec.rs  material_mix_registry.rs  task_system.rs  wasm.rs
boxddd/src/joints/: defs.rs  distance.rs  motor.rs  parallel.rs  prismatic.rs  revolute.rs  spherical.rs  wheel.rs  world_api.rs
boxddd/src/types/: contact.rs  ids.rs  math.rs  stats.rs
boxddd/src/world/: body_api.rs  creation.rs  runtime.rs  shape_api.rs
boxddd/tests/: api_coverage.rs  buffer_reuse.rs  collision_aabb.rs  collision_validation.rs  debug_draw.rs  determinism.rs  dynamic_tree.rs  events_and_sensors.rs  handle_validity_panics.rs  hello_world.rs  interop.rs  joint_new_apis.rs  joint_runtime.rs  joints.rs  manifold_collision.rs  math.rs  mover_api.rs  panic_across_ffi_is_caught.rs  raw_interop.rs  recording.rs  serde_values.rs  shape_geometry_validation.rs  shape_resources.rs  shape_runtime.rs  task_system.rs  try_api.rs  world_and_queries.rs  world_callbacks.rs  world_destroy_and_recycle.rs  world_runtime.rs
boxddd/tests/fixtures/: api_coverage_symbols.txt
docs/: api-coverage.md
docs/development/: ci.md  ffi-lifetime-audit.md  rustdoc-alignment.md
docs/pages/: index.html  sample-catalog.json
docs/pages/bevy-testbed/: index.html  loader.js
docs/pages/examples/: index.html
docs/pages/examples/advanced-colliders/: index.html
docs/pages/examples/arch-stack/: index.html
docs/pages/examples/body-controls/: index.html
docs/pages/examples/character-mover/: index.html
docs/pages/examples/contacts/: index.html
docs/pages/examples/continuous-collision/: index.html
docs/pages/examples/debug-draw/: index.html
docs/pages/examples/debug-draw-inspector/: index.html
docs/pages/examples/domino-run/: index.html
docs/pages/examples/falling-stack/: index.html
docs/pages/examples/joints/: index.html
docs/pages/examples/material-lab/: index.html
docs/pages/examples/materials/: index.html
docs/pages/examples/query-lab/: index.html
docs/pages/examples/ragdoll-chain/: index.html
docs/pages/examples/ray-picking/: index.html
docs/pages/examples/stats-dashboard/: index.html
docs/pages/examples/wind-field/: index.html
docs/pages/wasm/: live-smoke.js
docs/plans/: 2026-07-02-001-feat-box3d-binding-roadmap-plan.md  2026-07-02-002-feat-bevy-boxddd-plugin-plan.md  2026-07-03-001-feat-bevy-boxddd-advanced-integration-plan.md  2026-07-03-002-feat-core-task-system-callback-plan.md  2026-07-03-003-feat-wasm-runtime-tier1-plan.md  2026-07-03-004-feat-safe-api-completion-plan.md  2026-07-04-001-feat-deferred-api-math-interop-plan.md  2026-07-04-002-feat-docs-examples-parity-plan.md  2026-07-04-003-feat-testbed-pages-api-polish-plan.md  2026-07-05-001-feat-debug-draw-wasm-callback-bridge-plan.md  2026-07-05-002-feat-official-samples-parity-plan.md  2026-07-05-003-feat-0-2-api-stabilization-example-showcase-plan.md  2026-07-06-001-feat-0-2-release-hardening-plan.md
docs/upstream-parity/: box3d-api-matrix.md  box3d-sample-matrix.md
examples-wasm/: README.md
examples-wasm/provider-smoke/: Cargo.toml
examples-wasm/provider-smoke/src/: lib.rs
tools/: changelog.py  semver_audit.py  update_box3d_and_bindings.py
xtask/: Cargo.toml
xtask/src/: main.rs
