[workspace]
members = [
    "boxddd",
    "boxddd-sys",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Latias94/boxddd"
homepage = "https://github.com/Latias94/boxddd"

[workspace.dependencies]
boxddd-sys = { version = "0.1.0", path = "boxddd-sys" }
thiserror = "2"
