[package]
name = "bevy_boxddd"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Bevy integration for the boxddd Rust bindings to Box3D"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/bevy_boxddd"
readme = "README.md"
rust-version = "1.95.0"
keywords = ["box3d", "bevy", "physics", "game", "simulation"]
categories = ["game-engines", "api-bindings"]

[features]
default = []
debug-gizmos = ["dep:bevy_color", "dep:bevy_gizmos"]
physics-picking = []

[dependencies]
boxddd.workspace = true
bevy_app.workspace = true
bevy_color = { workspace = true, optional = true }
bevy_ecs.workspace = true
bevy_gizmos = { workspace = true, optional = true }
bevy_math.workspace = true
bevy_time.workspace = true
bevy_transform.workspace = true
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
bevy = "0.19.0"
bevy_egui = "0.41.0"
static_assertions = "1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
web-sys = { version = "0.3.103", features = ["Location", "Window"] }

[package.metadata.docs.rs]
all-features = false
no-default-features = false
features = []
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "falling_stack_3d"
path = "examples/falling_stack_3d.rs"

[[example]]
name = "contact_messages_3d"
path = "examples/contact_messages_3d.rs"

[[example]]
name = "debug_gizmos_3d"
path = "examples/debug_gizmos_3d.rs"

[[example]]
name = "advanced_colliders_3d"
path = "examples/advanced_colliders_3d.rs"

[[example]]
name = "joint_gallery_3d"
path = "examples/joint_gallery_3d.rs"

[[example]]
name = "debug_draw_overlay_3d"
path = "examples/debug_draw_overlay_3d.rs"
required-features = ["debug-gizmos"]

[[example]]
name = "physics_picking_3d"
path = "examples/physics_picking_3d.rs"
required-features = ["physics-picking"]

[[example]]
name = "testbed_3d"
path = "examples/testbed_3d/main.rs"
required-features = ["debug-gizmos", "physics-picking"]
