[package]
name = "boxddd-sys"
version.workspace = true
edition.workspace = true
description = "Low-level FFI bindings for Box3D built from vendored upstream sources"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
links = "box3d"
build = "build.rs"
readme = "README.md"
documentation = "https://docs.rs/boxddd-sys"
keywords = ["box3d", "physics", "ffi", "bindings", "game"]
categories = ["external-ffi-bindings", "game-engines"]

include = [
    "Cargo.toml",
    "README.md",
    "build.rs",
    "src/**",
    "third-party/box3d/include/**/*.h",
    "third-party/box3d/src/**/*.c",
    "third-party/box3d/src/**/*.h",
    "third-party/box3d/src/**/*.inl",
    "third-party/box3d/LICENSE",
]

[package.metadata.docs.rs]
all-features = false
no-default-features = true
features = []
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["build-from-source"]
build-from-source = []
bindgen = ["dep:bindgen"]
double-precision = []
disable-simd = []
validate = []

[build-dependencies]
cc = "1"
bindgen = { version = "0.72", optional = true }
