[package]
name = "boxddd"
version.workspace = true
edition.workspace = true
description = "Safe, ergonomic Rust bindings for Box3D"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/boxddd"
keywords = ["box3d", "physics", "game", "simulation"]
categories = ["game-engines"]

[dependencies]
boxddd-sys.workspace = true
thiserror.workspace = true
mint = { version = "0.5", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
cgmath = { version = "0.18", optional = true }
nalgebra = { version = "0.34", default-features = false, features = ["std"], optional = true }
glam = { version = "0.32", optional = true }
eframe = { version = "0.35.0", features = ["wgpu"], optional = true }
tokio = { version = "1.52.3", features = ["macros", "rt", "sync"], optional = true }

[features]
default = []
double-precision = ["boxddd-sys/double-precision"]
disable-simd = ["boxddd-sys/disable-simd"]
validate = ["boxddd-sys/validate"]
serde = ["dep:serde"]
serialize = ["serde"]
mint = ["dep:mint"]
cgmath = ["dep:cgmath"]
nalgebra = ["dep:nalgebra"]
glam = ["dep:glam"]
egui-example = ["dep:eframe"]
tokio-example = ["dep:tokio"]

[package.metadata.docs.rs]
all-features = false
no-default-features = false
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dev-dependencies]
anyhow = "1.0.103"
serde_json = "1"
static_assertions = "1"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"

[[example]]
name = "compound_query"
path = "examples/compound_query.rs"

[[example]]
name = "events"
path = "examples/events.rs"

[[example]]
name = "body_controls"
path = "examples/body_controls.rs"

[[example]]
name = "continuous_collision"
path = "examples/continuous_collision.rs"

[[example]]
name = "character_mover"
path = "examples/character_mover.rs"

[[example]]
name = "mesh_height_field_query"
path = "examples/mesh_height_field_query.rs"

[[example]]
name = "mint_interop"
path = "examples/mint_interop.rs"
required-features = ["mint"]

[[example]]
name = "glam_interop"
path = "examples/glam_interop.rs"
required-features = ["glam"]

[[example]]
name = "nalgebra_interop"
path = "examples/nalgebra_interop.rs"
required-features = ["nalgebra"]

[[example]]
name = "egui_debug_draw"
path = "examples/egui_debug_draw.rs"
required-features = ["egui-example"]

[[example]]
name = "tokio_async_bridge"
path = "examples/tokio_async_bridge.rs"
required-features = ["tokio-example"]

[[example]]
name = "wasm_smoke"
path = "examples/wasm_smoke.rs"
