[package]
name = "boxddd-provider-smoke"
version.workspace = true
edition.workspace = true
publish = false
description = "Browser-style provider smoke for boxddd"
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
boxddd.workspace = true
